feat(backend): added roles for frontend actions, added more team use cases (invite and kick user), update migrations and swagger #7
