# backend/docs/swagger.json
@@ -12,6 +12,56 @@
     "host": "localhost:8083",
     "basePath": "/api/v1",
     "paths": {
+        "/team/:id/role": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "team"
+                ],
+                "summary": "Set user role in team",
+                "operationId": "team-set-role",
+                "parameters": [
+                    {
+                        "description": "user id and role id",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_domain_team_delivery.setRoleRequest"
+                        }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Team ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/team/create": {
             "post": {
                 "consumes": [
@@ -51,6 +101,44 @@
                     },
                     "500": {
                         "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/team/roles": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "team"
+                ],
+                "summary": "Get team roles",
+                "operationId": "team-roles",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/task-tracker-server_internal_domain_team_entity.Role"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/echo.HTTPError"
                         }
@@ -150,6 +238,48 @@
             }
         },
         "/team/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "team"
+                ],
+                "summary": "Get team",
+                "operationId": "team-get",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Team id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/task-tracker-server_internal_domain_team_entity.Team"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "consumes": [
                     "application/json"
@@ -215,7 +345,7 @@
                         "required": true
                     },
                     {
-                        "description": "User id to add",
+                        "description": "User email to invite to team",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -243,7 +373,7 @@
                 }
             }
         },
-        "/team/{id}/remove-user": {
+        "/team/{id}/remove-user/{user_id}": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -265,13 +395,11 @@
                         "required": true
                     },
                     {
-                        "description": "User id to remove",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/internal_domain_team_delivery.removeUserRequest"
-                        }
+                        "type": "integer",
+                        "description": "User id to kick from team",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -321,7 +449,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/task-tracker-server_internal_domain_user_entity.User"
+                                "$ref": "#/definitions/task-tracker-server_internal_domain_team_entity.TeamUser"
                             }
                         }
                     },
@@ -668,7 +796,7 @@
             "type": "object",
             "properties": {
                 "email": {
-                    "type": "integer"
+                    "type": "string"
                 }
             }
         },
@@ -683,9 +811,12 @@
                 }
             }
         },
-        "internal_domain_team_delivery.removeUserRequest": {
+        "internal_domain_team_delivery.setRoleRequest": {
             "type": "object",
             "properties": {
+                "role_id": {
+                    "type": "integer"
+                },
                 "user_id": {
                     "type": "integer"
                 }
@@ -749,6 +880,17 @@
                 }
             }
         },
+        "task-tracker-server_internal_domain_team_entity.Role": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "role_name": {
+                    "type": "string"
+                }
+            }
+        },
         "task-tracker-server_internal_domain_team_entity.Team": {
             "type": "object",
             "properties": {
@@ -763,6 +905,26 @@
                 "name": {
                     "type": "string",
                     "example": "example team"
+                }
+            }
+        },
+        "task-tracker-server_internal_domain_team_entity.TeamUser": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "role": {
+                    "$ref": "#/definitions/task-tracker-server_internal_domain_team_entity.Role"
+                },
+                "surname": {
+                    "type": "string"
                 }
             }
         },
