# backend/internal/domain/team/delivery/main.go
@@ -19,11 +19,15 @@ func New(router *echo.Group, tu usecase.TeamUseCase, u userUseCase.UserUseCase) 
 	{
 		team.POST("/create", handler.CreateTeam)
 		team.PUT("/update", handler.UpdateTeam)
-		team.DELETE("/delete", handler.DeleteTeam)
+		team.DELETE("/:id", handler.DeleteTeam)
+		team.GET("/:id", handler.GetTeam)
 
 		team.GET("/user", handler.UserTeams)
 		team.GET("/:id/users", handler.Users)
 		team.POST("/:id/add-user", handler.AddUser)
-		team.DELETE("/:id/remove-user", handler.RemoveUser)
+		team.DELETE("/:id/remove-user/:user_id", handler.RemoveUser)
+
+		team.GET("/roles", handler.GetRoles)
+		team.POST("/:id/role", handler.SetRole)
 	}
 }
