# backend/internal/domain/team/entity/user.go
@@ -1,7 +1,9 @@
 package entity
 
-type Team struct {
-	ID          int    `json:"id" example:"1"`
-	Name        string `json:"name" example:"example team"`
-	Description string `json:"description" example:"My team 1"`
+type TeamUser struct {
+	ID      int64  `json:"id"`
+	Name    string `json:"name"`
+	Surname string `json:"surname"`
+	Email   string `json:"email"`
+	Role    Role   `json:"role"`
 }
